--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.exotikosteam.exotikos">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".ExotikosApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name=".ExotikosApplication">
+        android:theme="@style/AppTheme">
         <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,16 +18,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <meta-data
             android:name="io.fabric.ApiKey"
-            android:value="9d93aab23a0020bed8d4bf32f4c5fd184e3a8733"
-            />
+            android:value="9d93aab23a0020bed8d4bf32f4c5fd184e3a8733" />
         <meta-data
             android:name="FLIGHTSTATS_APP_ID"
             android:value="446d495f" />
         <meta-data
             android:name="FLIGHTSTATS_APP_KEY"
             android:value="cc4a60543606224b369ed138786562f3" />
+
+        <activity android:name=".activities.TravelStatusActivity"></activity>
     </application>
-    <uses-permission android:name="android.permission.INTERNET" />
+
 </manifest>
