--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ apply plugin: 'me.tatarka.retrolambda'
 
 repositories {
     mavenCentral()
+    jcenter()
     maven { url 'https://maven.fabric.io/public' }
     maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
 }
@@ -63,6 +64,7 @@ dependencies {
     compile 'com.facebook.stetho:stetho-okhttp3:1.4.1'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.jakewharton:butterknife:8.2.1'
+    compile 'com.github.aakira:expandable-layout:1.6.0@aar'
     compile('com.crashlytics.sdk.android:crashlytics:2.6.5@aar') {
         transitive = true;
     }
