trip creation and trip list

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".activities.MainActivity">
+
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
+        </activity>
+        <activity android:name=".activities.TravelStatusActivity" />
+        <activity
+            android:name=".activities.TripListActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -43,6 +55,7 @@
 
         <activity android:name=".activities.TravelStatusActivity"></activity>
         <activity android:name=".activities.HelpActivity"></activity>
+        <activity android:name=".activities.NewTripActivity"></activity>
     </application>
 
 </manifest>
