--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,21 +49,17 @@ android {
 }
 
 def dbflow_version = "3.1.1"
-
-android {
-    compileSdkVersion 24  // needs to be consistent with major support libs used
-}
-ext {
-    supportLibVersion = '24.2.1'  // variable that can be referenced to keep support libs consistent
-}
+def supportLibVersion = "24.2.1"
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:support-v4:24.2.1'
+    compile "com.android.support:appcompat-v7:${supportLibVersion}"
+    compile "com.android.support:support-v4:${supportLibVersion}"
+    compile "com.android.support:design:${supportLibVersion}"
+    compile "com.android.support:recyclerview-v7:${supportLibVersion}"
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.github.bumptech.glide:okhttp3-integration:1.4.0@aar'
     compile 'com.google.code.gson:gson:2.6.2'
