--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,7 @@ def dbflow_version = "3.1.1"
 def supportLibVersion = "24.2.1"
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -83,15 +83,16 @@ dependencies {
     apt "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
     compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
     compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
-    compile "com.android.support:support-vector-drawable:${supportLibVersion}" // VectorDrawableCompat
-    compile "com.android.support:animated-vector-drawable:${supportLibVersion}" // AnimatedVectorDrawableCompat
+    compile "com.android.support:support-vector-drawable:${supportLibVersion}"
+    // VectorDrawableCompat
+    compile "com.android.support:animated-vector-drawable:${supportLibVersion}"
+    // AnimatedVectorDrawableCompat
     apt 'org.parceler:parceler:1.1.1'
     compile 'com.google.android.gms:play-services-location:9.8.0'
     compile 'com.google.android.gms:play-services-maps:9.8.0'
-
-
     testCompile 'junit:junit:4.12'
     compile('com.microblink:pdf417.mobi:6.0.0@aar') {
         transitive = true
     }
+    compile files('libs/YouTubeAndroidPlayerApi.jar')
 }
