--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,13 +24,6 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".activities.MainActivity">
-
-            <!-- <intent-filter> -->
-            <!-- <action android:name="android.intent.action.MAIN" /> -->
-
-
-            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-            <!-- </intent-filter> -->
         </activity>
         <activity
             android:name=".activities.TravelStatusActivity" />
@@ -40,8 +33,11 @@
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         <activity
@@ -52,7 +48,9 @@
         <activity
             android:name=".activities.FlightResultsActivity"
             android:label="@string/select_flight" />
-
+        <activity
+            android:name=".activities.SecurityVideoActivity"
+            android:label="@string/security_video" />
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="9d93aab23a0020bed8d4bf32f4c5fd184e3a8733" />
