--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.MainActivity">
-        </activity>
+        <activity
+            android:name=".activities.MainActivity"
+            android:label="@string/app_name"/>
         <activity
             android:name=".activities.TravelStatusActivity" />
         <activity
@@ -51,6 +52,7 @@
         <activity
             android:name=".activities.SecurityVideoActivity"
             android:label="@string/security_video" />
+
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="9d93aab23a0020bed8d4bf32f4c5fd184e3a8733" />
@@ -60,8 +62,6 @@
         <meta-data
             android:name="FLIGHTSTATS_APP_KEY"
             android:value="cc4a60543606224b369ed138786562f3" />
-
-
     </application>
 
 </manifest>
