--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,7 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.jakewharton:butterknife:8.2.1'
     compile 'com.github.aakira:expandable-layout:1.6.0@aar'
+    compile 'com.daimajia.swipelayout:library:1.2.0@aar'
     compile('com.crashlytics.sdk.android:crashlytics:2.6.5@aar') {
         transitive = true;
     }
