added more help pages for travel prep

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,9 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".activities.TravelPrepProcessActivity"
+            android:label="Checkin List"/>
+        <activity
             android:name=".activities.NewTripActivity"
             android:label="@string/new_trip" />
         <activity
