--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name" />
-        <activity android:name=".activities.TravelStatusActivity" />
+        <activity android:name=".activities.TravelStatusActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"/>
         <activity
             android:name=".activities.TripListActivity"
             android:label="@string/trips_activity"
