rounded image for airline icon

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,4 +103,5 @@ dependencies {
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     compile 'com.commonsware.cwac:wakeful:1.0.+'
     compile 'net.danlew:android.joda:2.9.5'
+    compile 'com.makeramen:roundedimageview:2.2.1'
 }
