--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,4 +104,5 @@ dependencies {
     compile 'com.commonsware.cwac:wakeful:1.0.+'
     compile 'net.danlew:android.joda:2.9.5'
     compile 'com.makeramen:roundedimageview:2.2.1'
+    compile 'com.android.support:cardview-v7:23.2.1'
 }
